--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Bananana Pancakes</h1>
+    <p>Bananana pancakes are the absolute best, change my mind.</p>
 </body>
 </html>
