--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Bananana Pancakes</h1>
+    <h1>Buttersquash Pancakes</h1>
+    <p>Buttersquash pancakes are the new meta!</p>
 </body>
 </html>
